--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".MainActivity6"
-            android:exported="true">
+            android:name=".MainActivity7"
+            android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
+
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </intent-filter>>
         </activity>
         <activity
-            android:name=".MainActivity5"
+            android:name=".MainActivity6"
             android:exported="true"/>
+
+        <activity
+            android:name=".MainActivity5"
+            android:exported="true" />
         <activity
             android:name=".MainActivity4"
             android:exported="false" />
